# reminder_4u_bot

./: .gitignore  README.md  docker-compose.yml  main.py  requirements.txt
backend/: .env.example  manage.py  pyproject.toml
backend/core/: settings.py
backend/reminder/: admin.py  consts.py  schemas.py  services.py  tasks.py  utils.py
backend/reminder/migrations/: 0001_initial.py  0002_reminder_user_specified_date_time.py  0003_reminder_text_original.py
backend/reminder/models/: choices.py  models.py
backend/scripts/: run_scheduler.sh  run_telegram_bot.sh
backend/telegram_bot/: admin.py  apps.py  consts.py  decorators.py  main.py  models.py  settings.py  utils.py
backend/telegram_bot/management/commands/: run_bot.py
backend/telegram_bot/migrations/: 0001_initial.py  0002_message_type.py  0003_alter_tgmessage_message.py  0004_alter_tgchat_region.py
backend/telegram_bot/models/: choices.py  models.py
bot/: consts.py  settings.py  utils.py
containers/: backend.Dockerfile
containers/bot/: Dockerfile
